resources/home-automation/home-assistant/base/deployment.yaml
# Copyright (C) 2016, 2019 Nicolas Lamirault <nicolas.lamirault@gmail.com>

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  labels:
    k8s-app: home-assistant
spec:
  selector:
    matchLabels:
      k8s-app: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        k8s-app: home-assistant
    spec:
      serviceAccountName: postgres
      containers:
      - name: home-assistant
        image: homeassistant/home-assistant:latest
        ports:
            - name: api
              containerPort: 8123
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: api
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: api
            initialDelaySeconds: 30
            failureThreshold: 5
            timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /config
        securityContext:
          runAsUser: 0
          # fsGroup:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: home-assistant-data
